# scikit-dda

./: .travis.yml  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  docs.yml
docs/: conf.py  index.rst
skdda/: __init__.py  base.py
tests/: test_base.py
